# credit_bureau_simulations

./: pyproject.toml
app/: main.py
app/data/: all_data.json  data.json
app/routers/: cibil.py  crif_highmark.py  equifax.py  experian.py  np.py
