[project]
name = "simulation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sankalpaacharya", email = "sankalpaacharya01@gmail.com"},
]
dependencies = ["fastapi>=0.115.11", "uvicorn>=0.34.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"
